<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:skin="http://schemas.android.com/android/skin"
    skin:enable="true"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/header_back"
        layout="@layout/settings_back"/>
    <TextView
        android:layout_margin="10dp"
        android:text="@string/theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/theme_default"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/default_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@android:color/transparent"
                android:src="@drawable/default_theme" />
            <TextView
                android:layout_below="@+id/default_theme"
                android:padding="4dp"
                android:layout_centerVertical="true"
                android:text="@string/default_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_toRightOf="@+id/theme_default"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/blue_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@android:color/transparent"
                android:src="@drawable/blue_theme" />
            <TextView
                android:layout_below="@+id/blue_theme"
                android:padding="4dp"
                android:layout_centerVertical="true"
                android:text="@string/blue_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>