<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/assign_today"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:clickable="true">

        <ImageView
            android:id="@+id/assign_today_pic"
            android:layout_width="@dimen/setting_pic"
            android:layout_height="@dimen/setting_pic"
            android:layout_alignParentLeft="true"
            android:padding="8dp"
            app:srcCompat="@drawable/assign_today"/>
        <TextView
            android:layout_toRightOf="@+id/assign_today_pic"
            android:text="@string/assign_today"
            android:padding="8dp"
            android:textSize="16sp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/assign_one"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:clickable="true">

        <ImageView
            android:id="@+id/assign_one_pic"
            android:layout_width="@dimen/setting_pic"
            android:layout_height="@dimen/setting_pic"
            android:layout_alignParentLeft="true"
            android:padding="8dp"
            app:srcCompat="@drawable/assign_one"/>
        <TextView
            android:layout_toRightOf="@+id/assign_one_pic"
            android:text="@string/assign_one"
            android:padding="8dp"
            android:textSize="16sp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/assign_three"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:clickable="true">

        <ImageView
            android:id="@+id/assign_three_pic"
            android:layout_width="@dimen/setting_pic"
            android:layout_height="@dimen/setting_pic"
            android:layout_alignParentLeft="true"
            android:padding="8dp"
            app:srcCompat="@drawable/assign_three"/>
        <TextView
            android:layout_toRightOf="@+id/assign_three_pic"
            android:text="@string/assign_three"
            android:padding="8dp"
            android:textSize="16sp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/assign_week"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:clickable="true">

        <ImageView
            android:id="@+id/assign_week_pic"
            android:layout_width="@dimen/setting_pic"
            android:layout_height="@dimen/setting_pic"
            android:layout_alignParentLeft="true"
            android:padding="8dp"
            app:srcCompat="@drawable/assign_week"/>
        <TextView
            android:layout_toRightOf="@+id/assign_week_pic"
            android:text="@string/assign_week"
            android:padding="8dp"
            android:textSize="16sp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</LinearLayout>